fix some alignment problem of food page toolbar

--- a/src/App.css
+++ b/src/App.css
@@ -342,7 +342,8 @@ ion-grid.food-page-quantity-grid {
 }
 
 ion-button.food-page-confirm {
-  width: 95%;
+  width: 100%;
+  padding-right: 7%;
 }
 
 div.home-page-slides {
